<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:text="预留位置放时间控件"
        android:layout_height="35dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp">
        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/select_week"
            android:background="@drawable/order_tv_meal_background"
            />
        
        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/breakfast"
            android:background="@drawable/order_tv_meal_background"
            />
        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/lunch"
            android:background="@drawable/order_tv_meal_background"
            />
        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dinner"
            android:background="@drawable/order_tv_meal_background"
            />
        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/supper"
            android:background="@drawable/order_tv_meal_background"
            />
    </LinearLayout>
    <com.piccjm.piccdemo.ui.view.DayGroup
        android:id="@+id/dg_monday"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:dayText="@string/menu_monday"
        app:dayTextColor="@color/colorTitle"
        app:dayTextSize="5sp"
        app:dayTextBackground="@drawable/order_tv_meal_background"
        app:breakfastBackground="@drawable/select_cb_background"
        app:dinnerBackground="@drawable/select_cb_background"
        app:lunchBackground="@drawable/select_cb_background"
        app:supperBackground="@drawable/select_cb_background"
        >
    </com.piccjm.piccdemo.ui.view.DayGroup>
    <com.piccjm.piccdemo.ui.view.DayGroup
        android:id="@+id/dg_tuesday"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:dayText="@string/menu_tuesday"
        app:dayTextColor="@color/colorTitle"
        app:dayTextSize="5sp"
        app:dayTextBackground="@drawable/order_tv_meal_background"
        app:breakfastBackground="@drawable/select_cb_background"
        app:dinnerBackground="@drawable/select_cb_background"
        app:lunchBackground="@drawable/select_cb_background"
        app:supperBackground="@drawable/select_cb_background"
        >
    </com.piccjm.piccdemo.ui.view.DayGroup>

    <com.piccjm.piccdemo.ui.view.DayGroup
        android:id="@+id/dg_wednesday"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:dayText="@string/menu_wednesday"
        app:dayTextColor="@color/colorTitle"
        app:dayTextSize="5sp"
        app:dayTextBackground="@drawable/order_tv_meal_background"
        app:breakfastBackground="@drawable/select_cb_background"
        app:dinnerBackground="@drawable/select_cb_background"
        app:lunchBackground="@drawable/select_cb_background"
        app:supperBackground="@drawable/select_cb_background"
        >
    </com.piccjm.piccdemo.ui.view.DayGroup>

    <com.piccjm.piccdemo.ui.view.DayGroup
        android:id="@+id/dg_thursday"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:dayText="@string/menu_thursday"
        app:dayTextColor="@color/colorTitle"
        app:dayTextSize="5sp"
        app:dayTextBackground="@drawable/order_tv_meal_background"
        app:breakfastBackground="@drawable/select_cb_background"
        app:dinnerBackground="@drawable/select_cb_background"
        app:lunchBackground="@drawable/select_cb_background"
        app:supperBackground="@drawable/select_cb_background"
        >
    </com.piccjm.piccdemo.ui.view.DayGroup>

    <com.piccjm.piccdemo.ui.view.DayGroup
        android:id="@+id/dg_friday"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:dayText="@string/menu_friday"
        app:dayTextColor="@color/colorTitle"
        app:dayTextSize="5sp"
        app:dayTextBackground="@drawable/order_tv_meal_background"
        app:breakfastBackground="@drawable/select_cb_background"
        app:dinnerBackground="@drawable/select_cb_background"
        app:lunchBackground="@drawable/select_cb_background"
        app:supperBackground="@drawable/select_cb_background"
        >
    </com.piccjm.piccdemo.ui.view.DayGroup>

    <com.piccjm.piccdemo.ui.view.DayGroup
        android:id="@+id/dg_saturday"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:dayText="@string/menu_saturday"
        app:dayTextColor="@color/colorTitle"
        app:dayTextSize="5sp"
        app:dayTextBackground="@drawable/order_tv_meal_background"
        app:breakfastBackground="@drawable/select_cb_background"
        app:dinnerBackground="@drawable/select_cb_background"
        app:lunchBackground="@drawable/select_cb_background"
        app:supperBackground="@drawable/select_cb_background"
        >
    </com.piccjm.piccdemo.ui.view.DayGroup>

    <com.piccjm.piccdemo.ui.view.DayGroup
        android:id="@+id/dg_sunday"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:dayText="@string/menu_sunday"
        app:dayTextColor="@color/colorTitle"
        app:dayTextSize="5sp"
        app:dayTextBackground="@drawable/order_tv_meal_background_bottom"
        app:breakfastBackground="@drawable/select_cb_background"
        app:dinnerBackground="@drawable/select_cb_background"
        app:lunchBackground="@drawable/select_cb_background"
        app:supperBackground="@drawable/select_cb_background"
        >
    </com.piccjm.piccdemo.ui.view.DayGroup>


    <Button
        android:id="@+id/jsonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="测试"
        android:layout_gravity="center"
        />



</LinearLayout>